# rewrk

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  rustfmt.toml
.github/workflows/: docker-publish.yml  lint.yml  rust.yml
benchmarks/: bench_pyre.py
benchmarks/python/: fastapi_test.py  sanic_test.py  uvicorn_test.py
rewrk-bench/: Cargo.toml
rewrk-connection/: Cargo.toml
rewrk-core/: Cargo.toml  README.md
rewrk-core/src/: lib.rs  producer.rs  validator.rs
rewrk-core/src/connection/: conn.rs  mod.rs
rewrk-core/src/http/: conn.rs  mod.rs
rewrk-core/src/recording/: collector.rs  mod.rs  sample.rs
rewrk-core/src/runtime/: mod.rs  worker.rs
rewrk-core/src/utils/: io_usage.rs  mod.rs  sample_merger.rs  timings.rs  usage.rs
rewrk-core/tests/: basic_benchmark.rs  http2_benchmark.rs  timed_benchmark.rs
rewrk-results/: Cargo.toml
rewrk-setup/: Cargo.toml
rewrk-setup/src/: lib.rs
src/: args.rs  bench.rs  error.rs  http.rs  main.rs  results.rs  runtime.rs  utils.rs
src/http/: mod.rs  usage.rs  user_input.rs
src/proto/: client.rs  connector.rs  h1.rs  h2.rs  mod.rs  parse.rs  protocol.rs  random_clients.rs  tcp_stream.rs  tls.rs  uri.rs
tests/: test_server.py
