[package]
name = "rewrk"
version = "0.3.2"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>", "Programatik <programatik29@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
clap = "2"
colored = "2"
http = "0.2"
hyper = { version = "0.14", features = ["runtime", "client", "http1", "http2"] }
regex = "1"
rand = "0.8"
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros"] }
tower = { version = "0.4", features = ["util"] }
