[package]
name = "rewrk"
version = "0.4.0"
authors = ["Harrison Burt <hburt2003@gmail.com>", "Programatik <programatik29@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
url = "1.7.2"
humantime = "2.1.0"
http = "0.2.8"

clap = { version = "3", features = ["derive", "env"] }


[workspace]
members = [
    "rewrk-bench",
    "rewrk-connection",
    "rewrk-results",
    "rewrk-setup",
]